--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,41 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container">
+  <h1>Pages#about</h1>
+  <p>Find me in app/views/pages/about.html.erb</p>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <div class="container">
+    <canvas id="myChart"></canvas>
+  </div>
+</div>
+
+<script>
+  const ctx = document.getElementById('myChart');
+
+  const data = {
+      labels: <%= raw @names %>,
+      datasets: [{
+          label: 'Profile Views',
+          data: <%= raw @views %>,
+          fill: false,
+          borderColor: 'rgb(75, 192, 192)',
+          tension: 0.1
+      }, {
+          label: 'Total Posts',
+          data: <%= raw @posts %>,
+          fill: false,
+          borderColor: 'rgb(75, 12, 192)',
+          tension: 0.1
+      }]
+  };
+
+  const config = {
+      type: 'line',
+      data: data,
+  };
+
+  const myChart = new Chart(ctx, config)
+</script>
+
+
+
 <%= link_to "Home", root_path %>
