--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,13 @@
     <%= form.text_area :body %>
   </div>
 
+  <%#= select(:post, :user_id, @user_options) %>
+
   <div>
     <%= form.submit class:'btn btn-success'%>
   </div>
 <% end %>
+
+
+
+
